--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>5.3.9.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
